fixed overlapping icons

--- a/Seat_YoSelf/app/assets/stylesheets/application.css
+++ b/Seat_YoSelf/app/assets/stylesheets/application.css
@@ -90,8 +90,7 @@ img.img_tile{
  top: 90px;
 }
 
-
-div a:link {
+div#rest_button a:link{
   position: absolute;
   display: block;
   text-decoration: none;
@@ -104,18 +103,35 @@ div a:link {
   opacity: .8;
   font-size: 120%;
   font-family: arial;
-}
-
-div#rest_button a:link{
   right: 300px;
   text-align: center;
 }
 
 div#cuis_button a:link{
+  position: absolute;
+  display: block;
+  text-decoration: none;
+  top: 210px;
+  border: 1px blue solid;
+  padding: 20px;
+  color: #3e9fe5;
+  border-radius: 15px;
+  background: white;
+  opacity: .8;
+  font-size: 120%;
+  font-family: arial;
   right: 100px;
 }
 
 div#sign_up_button a:link{
+  position: absolute;
+  display: block;
+  text-decoration: none;
+  border: 1px blue solid;
+  padding: 20px;
+  border-radius: 15px;
+  opacity: .8;
+  font-family: arial;
   right: 250px;
   top: 80px;
   background: none;
@@ -125,6 +141,14 @@ div#sign_up_button a:link{
 }
 
 div#log_in_button a:link{
+  position: absolute;
+  display: block;
+  text-decoration: none;
+  border: 1px blue solid;
+  padding: 20px;
+  border-radius: 15px;
+  opacity: .8;
+  font-family: arial;
   right: 120px;
   top: 80px;
   background: none;
@@ -134,6 +158,14 @@ div#log_in_button a:link{
 }
 
 div#log_out a:link{
+  position: absolute;
+  display: block;
+  text-decoration: none;
+  border: 1px blue solid;
+  padding: 20px;
+  border-radius: 15px;
+  opacity: .8;
+  font-family: arial;
   right: 80px;
   top: 85px;
   background: none;
@@ -143,6 +175,14 @@ div#log_out a:link{
 }
 
 div#hey_user a:link{
+  position: absolute;
+  display: block;
+  text-decoration: none;
+  border: 1px blue solid;
+  padding: 20px;
+  border-radius: 15px;
+  opacity: .8;
+  font-family: arial;
   right: 230px;
   top: 77px;
   background: none;
@@ -151,6 +191,49 @@ div#hey_user a:link{
   color: black;
   font-style: italic;
 }
+
+div#hey_user a:link {
+  text-decoration: none;
+  color: black;
+}
+div#hey_user a:visited {
+  text-decoration: none;
+  color: black;
+}
+
+div#log_out a:link {
+  text-decoration: none;
+  font-style: normal;
+  color: black;
+}
+div#log_out a:visited {
+  text-decoration: none;
+  font-style: normal;
+  color: black;
+}
+
+div#rest_button a:link {
+  text-decoration: none;
+  font-style: normal;
+  color: black;
+}
+div#rest_button a:visited {
+  text-decoration: none;
+  font-style: normal;
+  color: black;
+}
+
+div#cuis_button a:link {
+  text-decoration: none;
+  font-style: normal;
+  color: black;
+}
+div#cuis_button a:visited {
+  text-decoration: none;
+  font-style: normal;
+  color: black;
+}
+
 
 nav {
   margin-top: 350px;
@@ -177,10 +260,11 @@ h1{
   box-sizing: border-box;
   display: inline-block;
   width: 25%;
+  text-align: left;
   margin-left: 100px;
 }
 
-#new_rest_button a:link{
+#make_a_button a:link{
   left: 30px;
   position: fixed;
   display: block;
@@ -219,13 +303,14 @@ input[type="submit"]{
 
 div a:link {
   text-decoration: none;
-  color: black;
+  color: blue;
+  font-style: italic;
 }
 
 /* visited link */
 div a:visited {
   text-decoration: none;
-  color: black;
+  color: blue;
 
 }
 
@@ -235,11 +320,17 @@ div a:hover {
   color: #0047E5;
   background-color:
   font-size: 1.4em;
-
 }
 
 /* selected link */
 div a:active {
   text-decoration: none;
+}
 
+a {
+  padding-bottom: 5px;
+}
+
+div.content {
+  margin: 10px 0 10px 100px;
 }
